File Drag-Drop support added

--- a/app/directives/mightyBar/mightyBarDirective.tpl.html
+++ b/app/directives/mightyBar/mightyBarDirective.tpl.html
@@ -1,4 +1,4 @@
-<div class="mightybar" ng-click='bar.show=true;' ng-hide="bar.show">
+<div class="mightybar" ng-click='bar.show=true;' ng-hide="bar.show" ng-file-drop="uploadResource()">
 	Drag-drop datoteku sa kompjutera(ubrzo) ili pritisni da dodas resurs...   
 </div>  
 
