--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 	<script src="lib/angular-loader.js"></script>
 	<script src="lib/angular-route.js"></script>
 	<script src="lib/angular-sanitize.min.js"></script>
+	<!-- shim is needed to support non-HTML5 FormData browsers (IE8-9)-->
+	<script src="lib/angular-file-upload-shim.min.js"></script> 
+	<script src="lib/angular-file-upload.min.js"></script> 
 
 
 	<script src="app/app.js"></script>
@@ -138,6 +141,7 @@
 
 		  });
    </script>
+
 	<script src="http://www.google-analytics.com/urchin.js"	type="text/javascript"></script>
 	<script type="text/javascript">
 			_uacct = "UA-2167214-1";
